fixed some admin gui bugs

--- a/vadginger-alpha/app/views/VadGingerUsers/edit.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/edit.html
@@ -5,10 +5,10 @@
 <div class="entity">
 #{form @VadGingerUsers.update(), id:'createForm'}
 	#{include 'VadGingerUsers/_form.html' /}
-  <button class="submit ui-corner-all submitbutton"">Opslaan</button>
-=======
+  <!-- <button class="submit ui-corner-all submitbutton"">Opslaan</button> -->
+<!-- ======= -->
   <button class="submit ui-corner-all submitbutton">Opslaan</button>
->>>>>>> 92d6904c9d379ea72ea913135e279d40ba2d347f
+<!-- >>>>>>> 92d6904c9d379ea72ea913135e279d40ba2d347f -->
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
