--- a/vadginger-alpha/app/views/Organisatiess/index.html
+++ b/vadginger-alpha/app/views/Organisatiess/index.html
@@ -5,9 +5,27 @@
   van <select id="org4suborgSelector" style="font-size:0.9em;">
   <option value="all">Alle organisaties</option>
   #{list items:mainorgs, as:'main'}
+  #{if orgId && main.id == orgId}
+  <option value="${main.id}" selected>${main.naam}</option>
+  #{/if}
+  #{else}
   <option value="${main.id}">${main.naam}</option>
+  #{/else}
   #{/list}
   </select>
+  <script type="text/javascript">
+    jQuery(document).ready(function(){
+      $("#org4suborgSelector").change(function(ev){
+        if($(this).val() == 'all'){
+          location.href = "/organisatiess/centrumsuborganisaties";
+        }
+        else{
+          location.href = "/organisatiess/centrumsuborganisaties?orgId="+$(this).val();
+        }
+      });
+    });
+
+  </script>
 #{/if}</h2>
 
 <table id="mytable" class="entity Organisaties">
