--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/jquery-ui-1.8.16.custom.css'}">
   <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
   #{get 'moreStyles' /}
-  <link rel="shortcut icon" type="image/png" href="@{'/public/images/vad.png'}">
+  <link rel="shortcut icon" type="image/png" href="@{'/public/images/vad.jpg'}">
   <script>
     ginger = {};
     #{if accordionTab}
