added locations to search form

--- a/vadginger-alpha/app/views/Activities/searchForm.html
+++ b/vadginger-alpha/app/views/Activities/searchForm.html
@@ -133,7 +133,7 @@
               
                       <option value="">(Niet van toepassing)</option>
               
-        %{ models.Locations.find("ouder = 1").fetch().sort{ it.toString() }.each() { }%
+        %{ models.Locations.find("ouder is null and isCluster=0 and isActive=1").fetch().sort{ it.toString() }.each() { }%
           <option value="${it?.id}" >${it?.naam}</option>
         %{ } }%
         </select>
