first version of filter export

--- a/vadginger-alpha/app/views/Activities/index.html
+++ b/vadginger-alpha/app/views/Activities/index.html
@@ -1,7 +1,11 @@
 #{extends 'main.html' /}
 
 <h2>Activities</h2>
-
+#{if allowExport}
+#{form @Activities.exportQuery()}
+<div class="centerMe dist50"><button class="bigSearch ui-corner-all" onclick="this.submit()">exporteer de (gefilterde) gegevens naar een *.csv bestand</button></div>
+#{/form}
+#{/if}
 <table id="mytable" class="entity Activity">
 	<thead>
 		<tr>
@@ -50,4 +54,6 @@
 		
 	</tbody>
 </table>
+
 #{paginate.controls items:entities /}
+
