--- a/vadginger-alpha/app/views/Activities/show.html
+++ b/vadginger-alpha/app/views/Activities/show.html
@@ -116,7 +116,7 @@
 			#{/else}
 			#{/list}
 		</li>
-		
+		Targets:
 		<li>
      		#{list items:asc, as:'ia'}
      		#{if ia.sectorId.ouder!=null} 
