--- a/vadginger-alpha/app/views/ActivityEvaluvatorss/create.html
+++ b/vadginger-alpha/app/views/ActivityEvaluvatorss/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create ActivityEvaluvators</h2>
+<h2>Activiteit Evaluators toevoegen</h2>
 
 <div class="entity">
 #{form @ActivityEvaluvatorss.save(), id:'createForm'}
