--- a/vadginger-alpha/app/views/ActivityTypes/edit.html
+++ b/vadginger-alpha/app/views/ActivityTypes/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit ActivityType</h2>
+<h2>Activiteit Type aanpassen</h2>
 
 <div class="entity">
 #{form @ActivityTypes.update(), id:'createForm'}
