--- a/vadginger-alpha/app/views/AttendantTypes/create.html
+++ b/vadginger-alpha/app/views/AttendantTypes/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create AttendantType</h2>
+<h2>Type Aanwezigen toevoegen</h2>
 
 <div class="entity">
 #{form @AttendantTypes.save(), id:'createForm'}
