--- a/vadginger-alpha/app/views/Centrumss/edit.html
+++ b/vadginger-alpha/app/views/Centrumss/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit Centrums</h2>
+<h2>Centrum aanpassen</h2>
 
 <div class="entity">
 #{form @Centrumss.update(), id:'createForm'}
