--- a/vadginger-alpha/app/views/EvaluvationTypes/edit.html
+++ b/vadginger-alpha/app/views/EvaluvationTypes/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit EvaluvationType</h2>
+<h2>Evaluvatie Type aanpassen</h2>
 
 <div class="entity">
 #{form @EvaluvationTypes.update(), id:'createForm'}
