--- a/vadginger-alpha/app/views/Itemss/edit.html
+++ b/vadginger-alpha/app/views/Itemss/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit Items</h2>
+<h2>Item aanpassen</h2>
 
 <div class="entity">
 #{form @Itemss.update(), id:'createForm'}
