--- a/vadginger-alpha/app/views/Locationss/cluster_edit.html
+++ b/vadginger-alpha/app/views/Locationss/cluster_edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit Cluster</h2>
+<h2>Cluster aanpassen</h2>
 
 <div class="entity">
 #{form @Locationss.updateCluster(), id:'createForm'}
