--- a/vadginger-alpha/app/views/Locationss/edit.html
+++ b/vadginger-alpha/app/views/Locationss/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit Locations</h2>
+<h2>Locatie aanpassen</h2>
 
 <div class="entity">
 #{form @Locationss.update(), id:'createForm'}
