--- a/vadginger-alpha/app/views/Materialss/create.html
+++ b/vadginger-alpha/app/views/Materialss/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create Materials</h2>
+<h2>Materiaal toevoegen</h2>
 
 <div class="entity">
 #{form @Materialss.save(), id:'createForm'}
