--- a/vadginger-alpha/app/views/Materialss/edit.html
+++ b/vadginger-alpha/app/views/Materialss/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit Materials</h2>
+<h2>Materiaal aanpassen</h2>
 
 <div class="entity">
 #{form @Materialss.update(), id:'createForm'}
