--- a/vadginger-alpha/app/views/Organisatiess/create.html
+++ b/vadginger-alpha/app/views/Organisatiess/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Nieuwe organisatie aanmaken</h2>
+<h2>Organisatie toevoegen</h2>
 
 <div class="entity">
 #{form @Organisatiess.save(), id:'createForm'}
