--- a/vadginger-alpha/app/views/Organisatiess/index.html
+++ b/vadginger-alpha/app/views/Organisatiess/index.html
@@ -32,9 +32,10 @@
 	<thead>
 		<tr>
 				<th>Naam</th>
-				<th>Organisatie Netwerk</th>
+				<th>Organisatie/Netwerk</th>
 				<th>Adres</th>
 				<th>Centrum</th>
+				<th>Hangt af van</th>
 			  <th><!-- actions --></th>
 		</tr>
 	</thead>
@@ -45,11 +46,14 @@
 					<td>${entity.organisatieNetwerk}</td>
 					<td>${entity.adres}, ${entity.postcode}&nbsp;${entity.gemeente}</td>
 					<td>${entity.centrumId?.naam}</td>
+					<td>${entity.ouderName}</td>
           <td>
             <table class="actiontable"><tr>
-              <td><a href="@{Organisatiess.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
-              <td><a href="@{Organisatiess.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
-              <td><a href="@{Organisatiess.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+              <td><a href="@{Organisatiess.show(entity.id)}" title="Bekijken" name="Bekijken"><div class="viewer actionbutton"></div></a></td>
+              #{if userRole && userRole.compareTo(models.RoleType.ORG_ADMIN)>=0 }
+              <td><a href="@{Organisatiess.edit(entity.id)}" title="Bewerken" name="Bewerken"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{Organisatiess.delete(entity.id)}" title="Verwijderen" name="Verwijderen" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+              #{/if}
             </tr></table>
           </td>
         
