--- a/vadginger-alpha/app/views/Sectorss/edit.html
+++ b/vadginger-alpha/app/views/Sectorss/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit Sectors</h2>
+<h2>Sector aanpassen</h2>
 
 <div class="entity">
 #{form @Sectorss.update(), id:'createForm'}
