--- a/vadginger-alpha/app/views/TargetTypes/edit.html
+++ b/vadginger-alpha/app/views/TargetTypes/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit TargetType</h2>
+<h2>Doelgroep Type aanpassen</h2>
 
 <div class="entity">
 #{form @TargetTypes.update(), id:'createForm'}
