--- a/vadginger-alpha/app/views/VadGingerUsers/create.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Nieuwe gebruiker aanmaken</h2>
+<h2>Ginger gebruiker toevoegen</h2>
 
 <div class="entity">
 #{form @VadGingerUsers.save(), id:'createForm'}
