--- a/vadginger-alpha/app/views/VadGingerUsers/edit.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Gebruiker aanpassen</h2>
+<h2>Ginger gebruiker aanpassen</h2>
 
 <div class="entity">
 #{form @VadGingerUsers.update(), id:'createForm'}
