--- a/vadginger-alpha/app/views/Activities/_form.html
+++ b/vadginger-alpha/app/views/Activities/_form.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="row">
-  <div class="label">Organisatie</div>
+  <div class="label">Organisatie***</div>
   <div class="field">
 
     <select name="organization" id="organizationSelect">
@@ -57,8 +57,8 @@
       function() {
         $("#hiddenOrg").empty();
         var selectedOrganization = $("#organizationSelect option:selected").val();
-        var listLocations = #{jsAction @Organisatiess.list(':id')/}
-          $("#hiddenOrg").load(listLocations({id: selectedOrganization}), function() {
+        var listLocations = "/suborganizations/list?id="+selectedOrganization+"&centrumId=${centrumId.id}";
+          $("#hiddenOrg").load(listLocations, function() {
           });
       });
     (function(){
