--- a/vadginger-alpha/app/views/Activities/edit.html
+++ b/vadginger-alpha/app/views/Activities/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit Activity</h2>
+<h2>Activiteit aanpassen</h2>
 
 <div class="entity">
 #{form @Activities.update(), id:'createForm'}
