--- a/vadginger-alpha/app/views/ActivityEvaluvatorss/edit.html
+++ b/vadginger-alpha/app/views/ActivityEvaluvatorss/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit ActivityEvaluvators</h2>
+<h2>Activiteit Evaluators aanpassen</h2>
 
 <div class="entity">
 #{form @ActivityEvaluvatorss.update(), id:'createForm'}
