--- a/vadginger-alpha/app/views/ActivityEvaluvatorss/index.html
+++ b/vadginger-alpha/app/views/ActivityEvaluvatorss/index.html
@@ -19,9 +19,9 @@
 					<td>${entity.evaluvatorsId}</td>
           <td>
             <table class="actiontable"><tr>
-              <td><a href="@{ActivityEvaluvatorss.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
-              <td><a href="@{ActivityEvaluvatorss.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
-              <td><a href="@{ActivityEvaluvatorss.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+              <td><a href="@{ActivityEvaluvatorss.show(entity.id)}" title="Bekijken" name="Bekijken"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{ActivityEvaluvatorss.edit(entity.id)}" title="Bewerken" name="Bewerken"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{ActivityEvaluvatorss.delete(entity.id)}" title="Verwijderen" name="Verwijderen" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
             </tr></table>
           </td>
         
