--- a/vadginger-alpha/app/views/ActivitySectorss/edit.html
+++ b/vadginger-alpha/app/views/ActivitySectorss/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit ActivitySectors</h2>
+<h2>ActivitySectors</h2>
 
 <div class="entity">
 #{form @ActivitySectorss.update(), id:'createForm'}
