--- a/vadginger-alpha/app/views/ActivitySectorss/index.html
+++ b/vadginger-alpha/app/views/ActivitySectorss/index.html
@@ -27,7 +27,7 @@
 			<td>
 				<a href="@{ActivitySectorss.show(entity.id)}">Show</a>&nbsp;
 				<a href="@{ActivitySectorss.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{ActivitySectorss.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
+				<a href="@{ActivitySectorss.delete(entity.id)}" title="Verwijderen" name="Verwijderen" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
 			</td>
 			
         
