--- a/vadginger-alpha/app/views/ActivityTargetss/index.html
+++ b/vadginger-alpha/app/views/ActivityTargetss/index.html
@@ -21,9 +21,9 @@
 					<td>${entity.attendantTypeId?.naam}</td>
           <td>
             <table class="actiontable"><tr>
-              <td><a href="@{ActivityTargetss.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
-              <td><a href="@{ActivityTargetss.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
-              <td><a href="@{ActivityTargetss.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+              <td><a href="@{ActivityTargetss.show(entity.id)}" title="Bekijken" name="Bekijken"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{ActivityTargetss.edit(entity.id)}" title="Bewerken" name="Bewerken"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{ActivityTargetss.delete(entity.id)}" title="Verwijderen" name="Verwijderen" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
             </tr></table>
           </td>
         
