--- a/vadginger-alpha/app/views/ActivityTypes/create.html
+++ b/vadginger-alpha/app/views/ActivityTypes/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create ActivityType</h2>
+<h2>Activiteit Type toevoegen</h2>
 
 <div class="entity">
 #{form @ActivityTypes.save(), id:'createForm'}
