--- a/vadginger-alpha/app/views/AttendantTypes/edit.html
+++ b/vadginger-alpha/app/views/AttendantTypes/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit AttendantType</h2>
+<h2>Type Aanwezigen aanpassen</h2>
 
 <div class="entity">
 #{form @AttendantTypes.update(), id:'createForm'}
