--- a/vadginger-alpha/app/views/Centrumss/create.html
+++ b/vadginger-alpha/app/views/Centrumss/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create Centrums</h2>
+<h2>Centrum toevoegen</h2>
 
 <div class="entity">
 #{form @Centrumss.save(), id:'createForm'}
