--- a/vadginger-alpha/app/views/EvaluvationTypes/create.html
+++ b/vadginger-alpha/app/views/EvaluvationTypes/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create EvaluvationType</h2>
+<h2>Evaluvatie Type toevoegen</h2>
 
 <div class="entity">
 #{form @EvaluvationTypes.save(), id:'createForm'}
