--- a/vadginger-alpha/app/views/Evaluvatorss/create.html
+++ b/vadginger-alpha/app/views/Evaluvatorss/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create Evaluvators</h2>
+<h2>Evaluator toevoegen</h2>
 
 <div class="entity">
 #{form @Evaluvatorss.save(), id:'createForm'}
