--- a/vadginger-alpha/app/views/Evaluvatorss/edit.html
+++ b/vadginger-alpha/app/views/Evaluvatorss/edit.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Edit Evaluvators</h2>
+<h2>Evaluator aanpassen</h2>
 
 <div class="entity">
 #{form @Evaluvatorss.update(), id:'createForm'}
