--- a/vadginger-alpha/app/views/Evaluvatorss/index.html
+++ b/vadginger-alpha/app/views/Evaluvatorss/index.html
@@ -15,9 +15,9 @@
 					<td>${entity.naam}</td>
           <td>
             <table class="actiontable"><tr>
-              <td><a href="@{Evaluvatorss.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
-              <td><a href="@{Evaluvatorss.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
-              <td><a href="@{Evaluvatorss.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+              <td><a href="@{Evaluvatorss.show(entity.id)}" title="Bekijken" name="Bekijken"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{Evaluvatorss.edit(entity.id)}" title="Bewerken" name="Bewerken"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{Evaluvatorss.delete(entity.id)}" title="Verwijderen" name="Verwijderen" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
             </tr></table>
           </td>
 		</tr>
