--- a/vadginger-alpha/app/views/GingerUserss/create.html
+++ b/vadginger-alpha/app/views/GingerUserss/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create GingerUsers</h2>
+<h2>Ginger gebruiker toevoegen</h2>
 
 <div class="entity">
 #{form @GingerUserss.save(), id:'createForm'}
