--- a/vadginger-alpha/app/views/GingerUserss/index.html
+++ b/vadginger-alpha/app/views/GingerUserss/index.html
@@ -35,7 +35,7 @@
 			<td>
 				<a href="@{GingerUserss.show(entity.id)}">Show</a>&nbsp;
 				<a href="@{GingerUserss.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{GingerUserss.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
+				<a href="@{GingerUserss.delete(entity.id)}" title="Verwijderen" name="Verwijderen" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
 			</td>
 			
         
