--- a/vadginger-alpha/app/views/Itemss/create.html
+++ b/vadginger-alpha/app/views/Itemss/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create Items</h2>
+<h2>Item toevoegen</h2>
 
 <div class="entity">
 #{form @Itemss.save(), id:'createForm'}
