--- a/vadginger-alpha/app/views/Locationss/create.html
+++ b/vadginger-alpha/app/views/Locationss/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create Locations</h2>
+<h2>Locatie toevoegen</h2>
 
 <div class="entity">
 #{form @Locationss.save(), id:'createForm'}
