--- a/vadginger-alpha/app/views/Sectorss/create.html
+++ b/vadginger-alpha/app/views/Sectorss/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create Sectors</h2>
+<h2>Sector toevoegen</h2>
 
 <div class="entity">
 #{form @Sectorss.save(), id:'createForm'}
