--- a/vadginger-alpha/app/views/TargetTypes/create.html
+++ b/vadginger-alpha/app/views/TargetTypes/create.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
 
-<h2>Create TargetType</h2>
+<h2>Doelgroep Type toevoegen</h2>
 
 <div class="entity">
 #{form @TargetTypes.save(), id:'createForm'}
