--- a/vadginger-alpha/app/views/Users/index.html
+++ b/vadginger-alpha/app/views/Users/index.html
@@ -43,7 +43,7 @@
 			<td>
 				<a href="@{Users.show(entity.id)}">Show</a>&nbsp;
 				<a href="@{Users.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{Users.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
+				<a href="@{Users.delete(entity.id)}" title="Verwijderen" name="Verwijderen" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
 			</td>
 			
         
