--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -29,6 +29,7 @@
   
   <script src="@{'/public/javascripts/jquery-1.6.2.min.js'}" type="text/javascript" charset="utf-8"></script>
   <script src="@{'/public/javascripts/jquery-ui-1.8.16.custom.min.js'}" type="text/javascript" charset="utf-8"></script>
+
   <script src="@{'/public/javascripts/main.js'}" type="text/javascript" charset="utf-8"></script>
   #{get 'moreScripts' /}
 </head>
@@ -108,7 +109,7 @@
           #{if userRole && userRole.compareTo(models.RoleType.ORG_ADMIN) >=0}
             <li><a href="@{VadGingerUsers.centrumUsers()}">Leden</a></li>
           #{/if}
-            <li>Organisaties<ul style="margin-left: 10px;"><li>(<a href="@{Organisatiess.centrumOrganisaties()}">Lijst</a> / <a href="@{Organisatiess.centrumSubOrganisaties()}">Subs</a> / <a href="@{Organisatiess.create()}">Nieuw</a>)</li></ul></li>
+            <li>Organisaties<ul style="margin-left: 10px;"><li>(<a href="@{Organisatiess.centrumOrganisaties()}">Lijst</a> / <a href="@{Organisatiess.centrumSubOrganisaties()}">Suborganisaties</a> / <a href="@{Organisatiess.create()}">Nieuw</a>)</li></ul></li>
             <li>Clusters (<a href="@{Locationss.clustersIndex()}">Lijst</a> / <a href="@{Locationss.createCluster()}">Nieuw</a>)</li>
           </ul></div>
           #{/if}
